# rocketproyect

./: Cargo.toml  Dockerfile  docker-compose.yml  rocket.toml
src/: main.rs
