[package]
name = "testRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.1"
postgres = "0.19"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[[bin]]
name = "testRust"
path = "src/main.rs"